@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2003/12/30 16:48:45 cjep Exp $
+# $NetBSD: Makefile,v 1.4 2004/01/03 18:49:51 reed Exp $
 
-DISTNAME=	wistumbler2.00-pre3
+DISTNAME=	wistumbler2.00-pre7
 PKGNAME=	${DISTNAME:S/wistumbler/wistumbler-/}
-PKGREVISION=	2
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.nopcode.org/prj/wistumbler2/
 
@@ -10,7 +9,7 @@ MAINTAINER=	pancake@phreaker.net
 HOMEPAGE=	http://www.nopcode.org/?t=wistumbler2
 COMMENT=	Fork of original WaveLAN/IEEE network stumbler
 
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 USE_X11=	YES
 GNU_CONFIGURE=	YES
 MANCOMPRESSED=	YES
@@ -25,9 +24,11 @@ BUILD_DEFS+=		WISTUMBLER2_USES_GTK
 .include "../../mk/bsd.prefs.mk"
 
 .if !empty(WISTUMBLER2_USES_GTK:M[Yy][Ee][Ss])
-.include "../../x11/gtk2/buildlink2.mk"
+.include "../../x11/gtk2/buildlink3.mk"
 .else
 CONFIGURE_ENV+=		USE_GTK=0
 .endif
 
+.include "../../net/libpcap/buildlink3.mk"
+.include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
