@@ -1,4 +1,4 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.1.1.1 2003/12/03 19:11:02 xtraeme Exp $
 
-SHA1 (wistumbler2.00-pre3.tar.gz) = d950ea5910a02e56b766b113af192f2274712c9a
-Size (wistumbler2.00-pre3.tar.gz) = 15409 bytes
+SHA1 (wistumbler2.00-pre7.tar.gz) = d12d2af1bbc9659ea3547b4618ef82c4e008694c
+Size (wistumbler2.00-pre7.tar.gz) = 23324 bytes
